Bug 970199 - Switch mouse event button type from ushort to short according to spec change. r=smaug